--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@ form.addEventListener('submit', e => {
  
 
 <!-- زر رابط -->
-<a href="https://miinishop.github.io/Home/" style="
+<a href="https://miinishop.github.io/Anakawe-jamal/" style="
     position: fixed;
     bottom: 10px;
     left: 10px;
